--- a/package.json
+++ b/package.json
@@ -7,11 +7,32 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "android-dev": "react-native run-android --mode=developmentDebug",
+    "android-dev-release": "react-native run-android --mode=developmentRelease",
+    "android-prod": "react-native run-android --mode=productionDebug",
+    "android-prod-release": "react-native run-android --mode=productionRelease"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
+    "@reduxjs/toolkit": "^2.5.1",
+    "axios": "^1.7.9",
     "react": "18.3.1",
-    "react-native": "0.77.0"
+    "react-native": "0.77.0",
+    "react-native-axios": "^0.17.1",
+    "react-native-config": "^1.5.3",
+    "react-native-gesture-handler": "^2.22.1",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-reanimated": "^3.16.7",
+    "react-native-safe-area-context": "^5.1.0",
+    "react-native-screens": "^4.6.0",
+    "react-native-splash-screen": "^3.3.0",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -24,13 +45,16 @@
     "@react-native/eslint-config": "0.77.0",
     "@react-native/metro-config": "0.77.0",
     "@react-native/typescript-config": "0.77.0",
-    "@types/jest": "^29.5.13",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.0.1",
+    "@types/jest": "^29.5.14",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "eslint": "^8.19.0",
-    "jest": "^29.6.3",
+    "jest": "^29.7.0",
     "prettier": "2.8.8",
-    "react-test-renderer": "18.3.1",
+    "react-test-renderer": "^18.3.1",
+    "redux-mock-store": "^1.5.5",
     "typescript": "5.0.4"
   },
   "engines": {
