--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "android-prod-release": "react-native run-android --mode=productionRelease"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
@@ -28,8 +29,10 @@
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.1.0",
+    "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^4.6.0",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-toast-message": "^2.2.1",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0"
