--- a/package.json
+++ b/package.json
@@ -16,17 +16,16 @@
   "dependencies": {
     "@react-native-community/geolocation": "^3.4.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
-    "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
+    "axios-mock-adapter": "^2.1.0",
     "react": "18.3.1",
     "react-native": "0.77.0",
     "react-native-axios": "^0.17.1",
     "react-native-config": "^1.5.3",
     "react-native-gesture-handler": "^2.22.1",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-safe-area-view": "^1.1.1",
@@ -48,6 +47,7 @@
     "@react-native/eslint-config": "0.77.0",
     "@react-native/metro-config": "0.77.0",
     "@react-native/typescript-config": "0.77.0",
+    "@react-navigation/native": "^7.0.14",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^13.0.1",
     "@types/jest": "^29.5.14",
